expansion - update des samples sur la structure

--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -66,9 +66,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion.ipynb\"\r\n",
-      "\u001b[33mA\u001b[m  \"2015-10-27 \\303\\251lasticit\\303\\251 rapsberry pyserial.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n",
       "\u001b[36m??\u001b[m ../.ipynb_checkpoints/\r\n",
       "\u001b[36m??\u001b[m ../PLAN_PRINCIPE_PROTO/\r\n",
       "\u001b[36m??\u001b[m ../Presentation-Dossier-Artistique/\r\n",
@@ -97,12 +94,12 @@
    ],
    "source": [
     "!git s\n",
-    "!git add 2015-10-27\\ élasticité\\ r*"
+    "#!git add 2015-10-27\\ élasticité\\ r*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -111,19 +108,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 9275c64]  on connecte le π\r\n",
-      " 3 files changed, 289 insertions(+), 67 deletions(-)\r\n",
-      " create mode 100644 \"posts/2015-10-27 \\303\\251lasticit\\303\\251 rapsberry pyserial.ipynb\"\r\n"
+      "[master ecc5c32]  on connecte le π : simplifying imports\r\n",
+      " 2 files changed, 120 insertions(+), 185 deletions(-)\r\n"
      ]
     }
    ],
    "source": [
-    "!git commit -am' on connecte le π '"
+    "!git commit -am' on connecte le π : simplifying imports'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -132,13 +128,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 7, done.\n",
+      "Counting objects: 6, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (7/7), done.\n",
-      "Writing objects: 100% (7/7), 175.73 KiB | 0 bytes/s, done.\n",
-      "Total 7 (delta 5), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (6/6), done.\n",
+      "Writing objects: 100% (6/6), 1.36 KiB | 0 bytes/s, done.\n",
+      "Total 6 (delta 5), reused 0 (delta 0)\n",
       "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   ff8f33a..9275c64  master -> master\n"
+      "   9275c64..ecc5c32  master -> master\n"
      ]
     }
    ],
