--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -30,7 +30,7 @@
     "    nmap -T4 -sP 192.168.2.0/24\n",
     "````\n",
     "\n",
-    "3 . cloned the repository on the π\n",
+    "3. what I used to clone the repository on the π\n",
     "\n",
     "````\n",
     "  686  pip install pyserial\n",
@@ -45,6 +45,24 @@
     "  695  pip install -e .\n",
     "  696  pip install --user -e .\n",
     "  697  python scenario_line_contraint.py  serial\n",
+    "````\n",
+    "\n",
+    "4. starting \n",
+    "\n",
+    "````\n",
+    "\n",
+    "⇒  ssh pi@192.168.2.3\n",
+    "pi@192.168.2.3's password: tropic\n",
+    "\n",
+    "Linux pielastic 3.18.7-v7+ #755 SMP PREEMPT Thu Feb 12 17:20:48 GMT 2015 armv7l\n",
+    "\n",
+    "pi@pielastic ~ $ cd elasticte/\n",
+    "\n",
+    "pi@pielastic ~/elasticte $ git pull # to update the code\n",
+    "Already up-to-date.\n",
+    "\n",
+    "pi@pielastic ~/elasticte $ python scenario_line_contraint.py serial\n",
+    "\n",
     "````\n"
    ]
   },
