storing animation as a movie

--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -84,6 +84,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\"\r\n",
+      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion.ipynb\"\r\n",
+      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 rapsberry pyserial.ipynb\"\r\n",
+      " \u001b[32mM\u001b[m ../scenario_line_contraint.py\r\n",
+      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n",
       "\u001b[36m??\u001b[m ../.ipynb_checkpoints/\r\n",
       "\u001b[36m??\u001b[m ../PLAN_PRINCIPE_PROTO/\r\n",
       "\u001b[36m??\u001b[m ../Presentation-Dossier-Artistique/\r\n",
@@ -101,7 +106,6 @@
       "\u001b[36m??\u001b[m ../files/lames_oscillantes_fps5.mp4\r\n",
       "\u001b[36m??\u001b[m \"../notes-Laurent/2015-10-22_\\303\\251lasticit\\303\\251 LAMES-Dynamique_pdf.pdf\"\r\n",
       "\u001b[36m??\u001b[m .ipynb_checkpoints/\r\n",
-      "\u001b[36m??\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\"\r\n",
       "\u001b[36m??\u001b[m __temp__.mp4\r\n",
       "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
       "\u001b[36m??\u001b[m anim.gif\r\n",
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -126,18 +130,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master ecc5c32]  on connecte le π : simplifying imports\r\n",
-      " 2 files changed, 120 insertions(+), 185 deletions(-)\r\n"
+      "[master e8cbc37]  on connecte le π + simplifying things\n",
+      " 5 files changed, 131 insertions(+), 134 deletions(-)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -am' on connecte le π : simplifying imports'"
+    "!git commit -am' on connecte le π + simplifying things'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -146,28 +150,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 6, done.\n",
-      "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 1.36 KiB | 0 bytes/s, done.\n",
-      "Total 6 (delta 5), reused 0 (delta 0)\n",
-      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   9275c64..ecc5c32  master -> master\n"
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\r\n",
+      " ! [rejected]        master -> master (fetch first)\r\n",
+      "error: failed to push some refs to 'git@git.framasoft.org:laurentperrinet/elasticte.git'\r\n",
+      "hint: Updates were rejected because the remote contains work that you do\r\n",
+      "hint: not have locally. This is usually caused by another repository pushing\r\n",
+      "hint: to the same ref. You may want to first integrate the remote changes\r\n",
+      "hint: (e.g., 'git pull ...') before pushing again.\r\n",
+      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\r\n"
      ]
     }
    ],
    "source": [
-    "! git push\n"
+    "! git push"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
