--- a/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
+++ b/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -196,8 +196,8 @@
       "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
       "\u001b[36m??\u001b[m anim.gif\r\n",
       "\u001b[36m??\u001b[m ../screenshot.png\r\n",
-      "\u001b[36m??\u001b[m ../src/.elasticite.py.~648e218c\r\n",
-      "\u001b[36m??\u001b[m ../src/elasticite.egg-info/\r\n"
+      "\u001b[36m??\u001b[m ../src/elasticite.egg-info/\r\n",
+      "\u001b[36m??\u001b[m ../src/elasticite_conflict-20151027-213102.py\r\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -265,13 +265,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To git@git.framasoft.org:laurentperrinet/elasticte.git\r\n",
-      " ! [rejected]        master -> master (non-fast-forward)\r\n",
-      "error: failed to push some refs to 'git@git.framasoft.org:laurentperrinet/elasticte.git'\r\n",
-      "hint: Updates were rejected because the tip of your current branch is behind\r\n",
-      "hint: its remote counterpart. Integrate the remote changes (e.g.\r\n",
-      "hint: 'git pull ...') before pushing again.\r\n",
-      "hint: See the 'Note about fast-forwards' in 'git push --help' for details.\r\n"
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 4 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 234.91 KiB | 0 bytes/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: \n",
+      "remote: ========================================================================\u001b[K\n",
+      "remote: \n",
+      "remote:       Mise à jour de Gitlab mardi 27 octobre à partir de 19h. Voir\u001b[K\n",
+      "remote:                       https://status.framasoft.org\u001b[K\n",
+      "remote: \n",
+      "remote: ========================================================================\u001b[K\n",
+      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
+      "   dc9dab4..cbc516d  master -> master\n"
      ]
     }
    ],
@@ -281,12 +288,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Already up-to-date.\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git pull"
+   ]
   }
  ],
  "metadata": {
