--- a/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
+++ b/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
        "<moviepy.video.io.html_tools.HTML2 object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -105,51 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:py.warnings:/usr/local/lib/python3.5/site-packages/matplotlib/collections.py:590: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if self._edgecolors == str('face'):\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] >>>> Building video ../files/reaction-diffusion.mp4\n",
-      "[MoviePy] Writing video ../files/reaction-diffusion.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                 "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[MoviePy] Done.\n",
-      "[MoviePy] >>>> Video ready: ../files/reaction-diffusion.mp4 \n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -159,7 +119,7 @@
        "<moviepy.video.io.html_tools.HTML2 object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,6 +157,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:py.warnings:/usr/local/lib/python3.5/site-packages/matplotlib/collections.py:590: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  if self._edgecolors == str('face'):\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video ../files/reaction-diffusion-up.mp4\n",
+      "[MoviePy] Writing video ../files/reaction-diffusion-up.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 5/401 [00:01<01:53,  3.49it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "class EdgeGrid(el.EdgeGrid):\n",
+    "    def update_particles(self):\n",
+    "        CC = self.particles[:, :, np.newaxis]-self.particles[:, np.newaxis, :] # 2xNxN ; en metres\n",
+    "        distance = np.sqrt(np.sum(CC**2, axis=0))# NxN ; en metres\n",
+    "        d_min, d_max = .2, 1.5\n",
+    "        #f = lambda d: -100./ self.N_particles* (np.exp(-d/d_max)/d_max - np.exp(-d/d_min)/d_min)\n",
+    "        #f = lambda d: 100./ self.N_particles* (np.exp(-d/d_max) - np.exp(-d/d_min))\n",
+    "        f = lambda d: 20./ self.N_particles* (np.exp(-d/d_max)/d_max - np.exp(-d/d_min)/d_min)\n",
+    "        #R = lambda w: - 3.5*np.sin(2*np.pi*w)\n",
+    "        #R = lambda w: w*(1 - w**2)\n",
+    "        R = lambda w: -10.*np.tanh(w) # (1+w)*(1-w)\n",
+    "        \n",
+    "        w = self.particles[2,:]\n",
+    "        #print('w_t', (np.dot(f(distance), w)).mean(), (np.dot(f(distance), w)).std())\n",
+    "        #w *= (1-self.dt)\n",
+    "        w += np.tanh(np.dot(f(distance), w) + R(w))*self.dt\n",
+    "        #print(w.min(), w.max())\n",
+    "        #w /= np.absolute(w).max()\n",
+    "        self.particles[2,:] = w\n",
+    "\n",
+    "    def update(self):\n",
+    "        self.update_particles()\n",
+    "\n",
+    "e = EdgeGrid(N_lame=25, grid_type='line')\n",
+    "#e.particles[2, :] = 0\n",
+    "#e.particles[2, 0] = -1.\n",
+    "#e.particles[2, -1] = 1.\n",
+    "#e.particles[2, :] = 2*np.random.rand(e.N_particles)-1\n",
+    "e.animate(duration=40, fps=10, fname='../files/reaction-diffusion-up.mp4')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,107 +229,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\"\r\n",
-      " \u001b[32mM\u001b[m ../src/elasticite.py\r\n",
-      "\u001b[36m??\u001b[m ../.ipynb_checkpoints/\r\n",
-      "\u001b[36m??\u001b[m ../PLAN_PRINCIPE_PROTO/\r\n",
-      "\u001b[36m??\u001b[m ../Presentation-Dossier-Artistique/\r\n",
-      "\u001b[36m??\u001b[m ../TESTS_TRAME/\r\n",
-      "\u001b[36m??\u001b[m ../__temp_ipython__.png\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_gauche.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_lateral.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_pasapas.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/elastic_fresnel_rot.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/fresnel.mp4\r\n",
-      "\u001b[36m??\u001b[m \"../files/grille_carr\\303\\251e.mp4\"\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_contraintes.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_oscillantes.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/lames_oscillantes_fps5.mp4\r\n",
-      "\u001b[36m??\u001b[m ../files/reaction-diffusion.mp4\r\n",
-      "\u001b[36m??\u001b[m \"../notes-Laurent/2015-10-22_\\303\\251lasticit\\303\\251 LAMES-Dynamique_pdf.pdf\"\r\n",
-      "\u001b[36m??\u001b[m .ipynb_checkpoints/\r\n",
-      "\u001b[36m??\u001b[m __temp__.mp4\r\n",
-      "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
-      "\u001b[36m??\u001b[m anim.gif\r\n",
-      "\u001b[36m??\u001b[m ../screenshot.png\r\n",
-      "\u001b[36m??\u001b[m ../src/elasticite.egg-info/\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[master 50cfcc8]  expansion - équation de reaction diffusion\r\n",
-      " 2 files changed, 35 insertions(+), 121 deletions(-)\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git commit -am' expansion - équation de reaction diffusion'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Counting objects: 6, done.\n",
-      "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 928 bytes | 0 bytes/s, done.\n",
-      "Total 6 (delta 5), reused 0 (delta 0)\n",
-      "To git@git.framasoft.org:laurentperrinet/elasticte.git\n",
-      "   6fff2d0..50cfcc8  master -> master\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! git push"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Already up-to-date.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git pull"
    ]
