expansion - on commence le miroir

--- a/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
+++ b/posts/2015-10-27 élasticité expansion-réaction diffusion.ipynb
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -258,11 +258,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[33mA\u001b[m\u001b[32mM\u001b[m ../.gitignore\r\n",
       " \u001b[32mM\u001b[m \"2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\"\r\n",
-      "\u001b[36m??\u001b[m ../.gitignore\r\n",
-      "\u001b[36m??\u001b[m ../PLAN_PRINCIPE_PROTO/\r\n",
-      "\u001b[36m??\u001b[m ../Presentation-Dossier-Artistique/\r\n",
-      "\u001b[36m??\u001b[m ../TESTS_TRAME/\r\n",
       "\u001b[36m??\u001b[m \"../notes-Laurent/2015-10-22_\\303\\251lasticit\\303\\251 LAMES-Dynamique_pdf.pdf\"\r\n",
       "\u001b[36m??\u001b[m __temp__.mp4\r\n",
       "\u001b[36m??\u001b[m __temp_ipython__.png\r\n",
@@ -277,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -286,9 +283,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 3c26642]  expansion - équation de reaction diffusion\r\n",
-      " 1 file changed, 216 insertions(+), 243 deletions(-)\r\n",
-      " rewrite \"posts/2015-10-27 \\303\\251lasticit\\303\\251 expansion-r\\303\\251action diffusion.ipynb\" (97%)\r\n"
+      "[master b07f546]  expansion - équation de reaction diffusion\r\n",
+      " 2 files changed, 179 insertions(+), 18 deletions(-)\r\n",
+      " create mode 100644 .gitignore\r\n"
      ]
     }
    ],
