expansion - ok pour les formules du miroir

--- a/posts/2015-11-02 élasticité expansion en miroir.ipynb
+++ b/posts/2015-11-02 élasticité expansion en miroir.ipynb
@@ -327,6 +327,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.2, 1.5], [-0.5, 0.8], [0.3, 0.9]]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "particles.T.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.2 -0.5  0.3]\n",
+      " [ 1.5  0.8  0.9]]\n",
+      "[[-0.5  0.5]\n",
+      " [ 0.5  1.5]]\n",
+      "[ 1. -1.]\n",
+      "[[ 0.3  0.3 -0.4]]\n",
+      "[[ 0.5 -0.2 -0.1]\n",
+      " [ 1.2  0.5  1.3]]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAyQAAAMRCAYAAAAdvXIaAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAWJQAAFiUBSVIk8AAAIABJREFUeJzt3X+MbGd93/HPt3FCY9OaFORYdVs718W21ECDgiixJWwC\n1CZRgYY2QYkCCopa1YIARTRKS7tr0yjqH+S2hBL/0TjNJekPJUopEqTQKjYmjlNFyi9FgDHc61T8\nUAIJdjHgNMFP/5i5Zr2+e+/uzpl5zjnzekmj8c6ZfeYZ6+zcfe+Z80y11gIAANDDX+g9AQAAYHsJ\nEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNI\nAACAbgQJAADQjSABAAC6WTlIquqvVNUPV9UvV9UDVfXlqnqoqj5cVa+tqjrieFdU1Z1V9emqerSq\nzlTVyap62qpzBQAAxqVaa6sNUPWPk/x0ks8kuSvJ/0nyzUm+J8nTkvxSa+17DznWiST3JXlGkvck\nuT/J85J8Z5KPJbmhtfaFlSYMAACMxhBBclOSS1pr79t3+2VJfjPJX0vyD1pr/+0QY30gyYuTvL61\n9q49t789yZuS3NFau3WlCQMAAKOxcpCcd/CqH0vy40l+qrX2hgvc90SSTyQ501q7et+2pyb57PLL\ny1prX1nHfAEAgM1a90ntf7a8/vND3PeFy+sP7t/QWnskyb1JLk7y/GGmBgAA9La2IKmqr0vymiQt\nyf84xLdcu7zvxw/Y/sDy+prVZwcAAIzBOo+Q/JskfyvJ+1pr//MQ9790ef3wAdvP3m61LQAAmIm1\nBElV/UiSf5rkI0levY7HAAAApu+ioQesqtcl+bdJfj/Ji1trDx3yW88eAbn0gO1nb7/geFW1vjP1\nAQBgplprR/oMwSEMeoSkqt6Y5B1Jfi/Jd7bW/ugI335/ksrB54g8c3l90DkmAADAxAy27G9V/WiS\nn0jyW0lectQPMBxy2d+zR0jWuaQxbFJV2Z+ZDfszc2J/Zi6qFgdGJnuEpKr+ZRYx8ptZvE3rwBip\nqouq6tplgDyutXY6iyV/r1q+7Wuv25NckuSUzyABAID5GOKT2l+T5Gez+KyRd+bcq2Q92Fr7ueX9\nr0xyZnnbE6JkGSn3JrksyXuTfDSLzx25KcnHktxwmCMvjpAwN/4Cx5zYn5kT+zNz0fMIyRAntV+V\nxeeHfF2Sgz6N/UNJfm7P1215eYLW2umqem4WR0RuSfLSLN6qdTLJ7a21g5YEBgAAJmiwc0jGxBES\n5sZf4JgT+zNzYn9mLiZ/DgkAAMBxCBIAAKAbQQITsLOz03sKMBj7M3Nif4bVOYcEAAC2nHNIAACA\nrSRIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQ\njSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3\nggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0I\nEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNI\nAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSAB\nAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQA\nAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAA\noBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACA\nbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6\nESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhG\nkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtB\nAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJ\nAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQA\nAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAA\nAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAA\ndCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0IEgAAoBtBAgAAdDNIkFTVK6vqHVV1\nT1U9XFWPVdWpY4zz4PJ7z3X5zBBzBQAAxuOigcZ5a5JnJ3kkyaeSXHfMcVqSh5KcTFL7tj1y7NkB\nAACjNFSQvDHJp1prn6yqG5PctcJYD7XW3jbQvAAAgBEb5C1brbUPtdY+OcRYALDNdnd7zwBgs6q1\nNuyAXztC8vOttVcf8XvPJPmGJP8syd9I8qUkv5fkntbaY0cYpyXJ0M8NANatKvHPF7BpVYuzJVpr\n+0+bWLuh3rI1pMuT7D0hvpKcqaofaq3d02lOAADAGoxt2d87k7woiyi5JMmzktyR5Kok76+qZ/Wb\nGgAAMLRRBUlr7W2ttbtba59rrT3aWvtIa+3WJD+Z5OIku31nCACwdN99ycmTvWcBkzfGt2ydyx1J\n3pzkBb0nAgCQ++5Lbr45+eIXk6uvTl72st4zgska1RGS8/jc8vqSo3xTVR142bWMCQAd7e4uTmDf\nf0nOfbt/tkZkb4y86lXJd31X7xnBoezu7h74u3FPo1pl6zxj3pzkV5J8pLX2rYe4v1W2AJgkq2yN\n3P4Yefe7k4um8oYTOFjPVbY2foSkqi6qqmur6sS+26+rqovPcf+rkrwzi09xf/dGJgkAsJ8YgbUY\n5Keoql6e5BXLLy9fXl9fVT+7/O/Pt9besvzvK5J8NMmDSfZGyfcleXNV3ZPkD5J8McnVSb47yVOS\nvC/J24eYLwDAkYgRWJuhfpK+Lcnet2e1JN+yvCSL+HjLvu37D0jfleSaJM9Jcn0W54s8lOTDSU61\n1n5hoLkCAByeGIG1GvwckjFwDgkAU+UckpERI2yJrTqHBAA42M5O7xnwODECG+EICQDAfmKELeMI\nCQDAWIgR2ChBAgBwlhiBjRMkAACJGIFOBAkAgBiBbgQJALDdxAh0JUgAgO0lRqA7QQIAbCcxAqMg\nSACA7SNGYDQECQCwXcQIjIogAQC2hxiB0REkAMB2ECMwSoIEAJg/MQKjJUgAgHkTIzBqggQAmC8x\nAqMnSACAeRIjMAmCBACYHzECkyFIAIB5ESMwKYIEAJgPMQKTI0gAgHkQIzBJggQAmD4xApMlSACA\naRMjMGmCBACYLjECkydIAIBpEiMwC4IEAJgeMQKzIUgAgGkRIzArggQAmA4xArMjSACAaRAjMEuC\nBAAYPzECsyVIAIBxEyMwa4IEABgvMQKzJ0gAgHESI7AVBAkAMD5iBLaGIAEAxkWMwFYRJADAeIgR\n2DqCBAAYBzECW0mQAAD9iRHYWoIEAOhLjMBWEyQAQD9iBLaeIAEA+hAjQAQJANCDGAGWBAkAsFli\nBNhDkAAAmyNGgH0ECQCwGWIEOAdBAgCsnxgBDiBIAID1EiPAeQgSAGB9xAhwAYIEAFgPMQIcgiAB\nAIYnRoBDEiQAwLDECHAEggQAGI4YAY5IkAAAwxAjwDEIEgBgdWIEOCZBAgCsRowAKxAkAMDxiRFg\nRYIEADgeMQIMQJAAAEcnRoCBCBIA4GjECDAgQQIAHJ4YAQYmSABmbvfu3d5TYC7ECLAG1VrrPYfB\nVVVLkjk+N4CjqtsqbcfrISsSIzBrVZUkaa3Vph/bERIA4PzECLBGggQAOJgYAdZMkAAA5yZGgA0Q\nJADAk4kRYEOc1A4wE7t37+a2D9126Pvv3LiT3Zt21zchpkuMwNbpeVK7IAGYOatscSRiBLaSVbYA\ngP7ECNCBIAEAxAjQjSABgG0nRoCOBAkAbDMxAnQmSABmbufGnd5TYKzECDACVtkCgG0kRoA9rLIF\nAGyOGAFGRJAAwDYRI8DICBIA2BZiBBghQQIA20CMACMlSABg7sQIMGKCBADmTIwAIydIAGCuxAgw\nAYIEAOZIjAATIUgAYG7ECDAhggQA5kSMABMjSABgLsQIMEGCBADmQIwAEyVIAGDqxAgwYYIEAKZM\njAATJ0gAYKrECDADggQApkiMADMhSABgasQIMCOCBACmRIwAMyNIAGAqxAgwQ4IEAKZAjAAzJUgA\nYOzECDBjggQAxkyMADMnSABgrMTI6O3evdt7CjB51VrrPYfBVVVLkjk+NwC2hBiZhLqt0nb8vsH0\nVVWSpLVWm35sR0gAYGzECLBFBAkAjIkYAbaMIAGAsRAjwBYSJAAwBmIE2FJOageA3sTI6O3evZvb\nPnTboe+/c+NOdm/aXd+EYGA9T2oXJADQkxiZNKtsMRdW2QKAbSRGAAQJAHQhRgCSCBIA2DwxAvA4\nQQIAmyRGAJ5AkADApoiR2dm5caf3FGDyrLIFAJsgRoARs8oWAMyZGAE4kCABgHUSIwDnJUgAYF3E\nCMAFCRIAWAcxAnAoggQAhiZGAA5NkADAkMQIwJEIEgAYihgBODJBAgBDECMAxyJIAGBVYgTg2AQJ\nAKxCjACsRJAAwHGJEYCVCRIAOA4xAjAIQQIARyVGAAYjSADgKMQIwKAECQAclhgBGJwgAYDDECMA\nayFIAOBCxAjA2ggSADgfMQKwVoIEAA4iRgDWTpAAwLmIEYCNECQAsJ8YAdgYQQIAe4kRgI0SJABw\nlhgB2DhBAgCJGAHoRJAAgBgB6EaQALDdxAhAV4IEgO0lRgC6EyQAbCcxAjAKggSA7SNGAEZDkACw\nXcQIwKgIEgC2hxgBGB1BAsB2ECMAoyRIAJg/MQIwWoIEgHkTIwCjJkgAmC8xAjB6ggSAeRIjAJMg\nSACYHzECMBmCBIB5ESMAkyJIAJgPMQIwOYIEgHkQIwCTJEgAmD4xAjBZggSAaRMjAJMmSACYLjEC\nMHmCBIBpEiMAsyBIAJgeMQIwG4IEgGkRIwCzIkgAmA4xAjA7ggSAaRAjALMkSAAYPzECMFuCBIBx\nEyMAsyZIABgvMQIwe4IEgHESIwBbQZAAMD5iBGBrCBIAxkWMAGwVQQLAeIgRgK0zSJBU1Sur6h1V\ndU9VPVxVj1XVqWOOdUVV3VlVn66qR6vqTFWdrKqnDTFXAEZKjABspaFe6d+a5NlJHknyqSTXHWeQ\nqjqR5L4kz0jyniT3J3lekjckubmqbmitfWGQGQMwHmIEYGsN9ZatNya5prV2aZJbk9Qxx/npLGLk\n9a21V7bW/nlr7cVJTmYROT8+yGwBGA8xArDVqrU27IBVNya5K8nPt9ZefYTvO5HkE0nOtNau3rft\nqUk+u/zystbaVy4wVkuSoZ8bAAMTIwCjULU4ntBaO+6BhWMb00ntL1xef3D/htbaI0nuTXJxkudv\nclIArIkYASDjCpJrk7QkHz9g+wPL62s2Mx0A1kaMALA0piC5dHn98AHbz95utS2AKRMjAOwxpiAB\nYO7ECAD7jClIzh4BufSA7Wdvf2gDcwFgaGIEgHMYU5Dcn8VywQedI/LM5fVB55g8SVUdeNnd3V1x\nugAcmhgB6G53d/fA3417suwvAOslRgBGb6uW/a2qi6rq2mWAPK61djqLJX+vqqrX7fu225NckuTU\nhWIEgBERIwBcwCBHSKrq5Ulesfzy8iQ3Jzmd5MPL2z7fWnvL8r5XJjmT5MHW2ol945zI4vNGLkvy\n3iQfzeJzR25K8rEkN7TWvnCI+ThCAtCbGAGYjJ5HSIYKkp0k/+o8d3nw7NuwlkFyeu9t+8a6Iosj\nIrckeXoWb9X65SS3t9YOWhJ4/xiCBKAnMQIwKZMPkrERJAAdiRGAydmqc0gAmDExAsARCRIAhiFG\nADgGQQLA6sQIAMckSABYjRgBYAWCBIDjEyMArEiQAHA8YgSAAQgSAI5OjAAwEEECwNGIEQAGJEgA\nODwxAsDABAkAhyNGAFgDQQLAhYkRANZEkABwfmIEgDUSJAAcTIwAsGaCBIBzEyMAbIAgAeDJxAgA\nGyJIAHgiMQLABgkSAL5GjACwYYIEgAUxAkAHggQAMQJAN4IEYNuJEQA6EiQA20yMANCZIAHYVmIE\ngBEQJADbSIwAMBKCBGDbiBEARkSQAGwTMcIR7e72ngEwd9Va6z2HwVVVS5I5PjeAYxMjHENV4p9T\nmL+qSpK01mrTj+0ICcA2ECMAjJQgAZg7MQLAiAkSgDkTIwCMnCABmCsxAsAECBKAORIjHNHu7uIE\n9v2X5Ny3W30LGIpVtgDmRowwIKtswXawyhYAwxAjAEyMIAGYCzECwAQJEoA5ECMATJQgAZg6MQLA\nhAkSgCkTI6zZzk7vGQBzZ5UtgKkSIwAMxCpbAByNGAFgJgQJwNSIEQBmRJAATIkYAWBmBAnAVIgR\nAGZIkABMgRgBYKYECcDYiREAZkyQAIyZGAFg5gQJwFiJEQC2gCABGCMxAsCWECQAYyNGANgiggRg\nTMQIAFtGkACMhRgBYAsJEoAxECMAbClBAtCbGAFgiwkSgJ7ECABbTpAA9CJGAECQAHQhRgAgiSAB\n2DwxAgCPEyQAmyRGAOAJBAnApogRAHgSQQKwCWIEAM5JkACsmxgBgAMJEpiA3d3eM+DYxAgAnFe1\n1nrPYXBV1ZJkjs+N7VSV2J0nSIwAMBFVlSRprdWmH9sREoB1ECMAcCiCBGBoYgQADk2QAAxJjADA\nkQgSgKGIEQA4MkECI7K7uziBff8lOfftVt8aETECAMdilS2YAKtsjZwYAWDirLIFMFViBABWIkgA\njkuMAMDKBAnAcYgRABiEIAE4KjECAIMRJDABOzu9Z8DjxAgADMoqWwCHJUYAmCmrbAGMnRgBgLUQ\nJAAXIkYAYG0ECcD5iBEAWCtBAnAQMQIAaydIAM5FjADARggSgP3ECABsjCAB2EuMAMBGCRKAs8QI\nAGycIAFIxAgAdCJIAMQIAHQjSIDtJkYAoCtBAmwvMQIA3QkSYDuJEQAYBUECbB8xAgCjIUiA7SJG\nAGBUBAmwPcQIAIyOIAG2gxgBgFESJMD8iREAGC1BAsybGAGAURMkwHyJEQAYPUECzJMYAYBJECTA\n/IgRAJgMQQLMixgBgEkRJMB8iBEAmBxBAsyDGAGASRIkwPSJEQCYLEECTJsYAYBJEyTAdIkRAJg8\nQQJMkxgBgFkQJMD0iBEAmA1BAkyLGAGAWREkwHSIEQCYHUECTIMYAYBZEiTA+IkRAJgtQQKMmxgB\ngFkTJMB4iREAmD1BAoyTGAGArSBIgPERIwCwNQQJMC5iBAC2iiABxkOMAMDWESTAOIgRANhKggTo\nT4wAwNYSJEBfYgQAtpogAfoRIwCw9QQJ0IcYAQAiSIAexAgAsCRIgM0SIwDAHoIE2BwxAgDsI0iA\nzRAjAMA5CBJg/cQIAHAAQQKslxgBAM5DkADrI0YAgAsQJMB6iBEA4BAECTA8MQIAHJIgAYYlRgCA\nIxAkwHDECABwRIIEGIYYAQCOQZAAqxMjAMAxCRJgNWIEAFiBIAGOT4wAACsSJMDxiBEAYACCBDg6\nMQIADESQAEcjRgCAAQkS4PDECAAwMEECHI4YAQDWQJAAFyZGAIA1ESTA+YkRAGCNBAlwMDECAKyZ\nIAHOTYwAABsgSIAnEyMAwIYIEuCJxAgAsEGCBPgaMQIAbJggARbECADQgSABxAgA0I0ggW0nRgCA\njgQJbDMxAgB0JkhgW4kRAGAEBAlsIzECAIyEIIFtI0YAgBERJLBNxAgAMDKCBLaFGAEARkiQwDYQ\nIwDASAkSmDsxAgCMmCCBORMjAMDICRKYKzECAEyAIIE5EiMAwEQIEpgbMQIATIgggTkRIwDAxAgS\nmAsxAgBMkCCBORAjAMBECRKYOjECAEzYYEFSVVdU1Z1V9emqerSqzlTVyap62hHGeLCqHjvg8pmh\n5gqzIUYAgIkb5DeXqjqR5L4kz0jyniT3J3lekjckubmqbmitfeEQQ7UkDyU5maT2bXtkiLnCbIgR\nAGAGqrW2+iBVH0jy4iSvb629a8/tb0/ypiR3tNZuPcQ4Z5K01tqJFefTshholWFgvMQIADCgqsWx\ngNba/oMCa7fyW7aWR0dekuTBvTGytJPkS0l+sKq+cdXHAiJGJmD37t3eUwCAyRjiHJIXLq8/uH9D\na+2RJPcmuTjJ8w853lOq6geq6seq6keq6qaqcvI9JGJkIm770G29pwAAkzHEbzLXZnHux8cP2P5A\nFkdQrkly1yHGuzzJqT1fV5IzVfVDrbV7VpkoTJoYAQBmaIgjD5curx8+YPvZ2w+z2tadSV6URZRc\nkuRZSe5IclWS91fVs44/TZgwMQIAzNSofqNprb1t300fSXJrVX0pyZuT7CZ55abnBV2JEQBgxoY4\nQnL2CMilB2w/e/tDKzzGHcvrF6wwBkzPH/9x8tKXihEAYLaGCJL7szjP45oDtj9zeX3QOSaH8bnl\n9SVH+aaqOvCyu7u7wnRgQ57+9OTkyeT7v1+MjNDu3bup2+pJlyTnvN3qWwD0tLu7e+Dvxj2t/Dkk\ny2V/P5HkTGvt6n3bnprks8svL2utfeWYj3Fzkl9J8pHW2rce4v4+h4R5aS3p/GLB4dVtlbbj9QeA\n6Zj055C01k5nseTvVVX1un2bb8/iqMapszFSVRdV1bXLkHlcVV1XVRfvH7+qrkryzixW8nr3qvOF\nSRIjAMBMDfX+j1uz+LyRf1dVL0ry0Sw+d+SmJB9L8tY9971iuf3BJHuj5PuSvLmq7knyB0m+mOTq\nJN+d5ClJ3pfk7QPNFwAAGIFBgqS1drqqnpvFEZFbkrw0i7dqnUxye2tt/5LAbXnZ664szkN5TpLr\nsziy8lCSD2dxhOUXhpgrAAAwHiufQzJGziEBenIOCQBTM+lzSAB4op0bd3pPAQAmwxESAADYco6Q\nAAAAW0mQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgS\nAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gA\nAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEA\nALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA\n6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACg\nG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBu\nBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoR\nJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQ\nAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0EC\nAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkA\nANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAA\nQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA\n3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0\nI0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCN\nIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeC\nBAAA6EaQAAAA3QgSAACgG0ECAAB0I0gAAIBuBAkAANCNIAEAALoRJAAAQDeCBAAA6EaQAAAA3QgS\nAACgm8GCpKquqKo7q+rTVfVoVZ2pqpNV9bQe4wAAAOM3SJBU1Ykkv5XkNUl+I8lPJvlkkjck+fWq\n+qZNjgNzs7u723sKMBj7M3Nif4bVVWtt9UGqPpDkxUle31p7157b357kTUnuaK3dusFxWpIM8dxg\nDKrK/sxs2J+ZE/szc1FVSZLWWm38sVf9IVoe1fhEkjOttav3bXtqks8uv7ystfaVdY+zvL8gYVb8\ng8ec2J+ZE/szc9EzSIZ4y9YLl9cf3L+htfZIknuTXJzk+RsaBwAAmIghguTaJC3Jxw/Y/sDy+poN\njQMAAEzEEEFy6fL64QO2n739QqtkDTUOAAAwET6HBAAA6OaiAcY4e+Ti0gO2n739oQ2N87izJ+fA\nHNifmRP7M3Nif4bVDHGE5P4klYPP7Xjm8vqgc0OGHgcAAJiIWS77CwAATMPKR0haa6ezWKr3qqp6\n3b7Ntye5JMmpsxFRVRdV1bXLADn2OAAAwPQN9UntJ7L4nJDLkrw3yUez+LyQm5J8LMkNrbUvLO97\nZZIzSR6/KAPNAAAGrklEQVRsrZ047jgAAMD0DRIkSVJVV2RxJOOWJE/P4i1Wv5zk9tbaw3vud2WS\n01kEydXHHQcAAJi+wYIEAADgqHwOCQAA0I0gAQAAuhEkAABAN5MOkuUSwm+oqjur6rer6k+r6rGq\neu0KY15fVe+vqj+uqi9X1e8uH2PS/6+YjiH2waq6cvmzcNDlP63zObBdquqK5evwp6vq0ao6U1Un\nq+ppPcaBVQyxH1bVg+d5/f3MOucPSVJVr6yqd1TVPVX18HLfO3XMsdb+2nzRUAN1ckmSk0lakj/M\nYkWuv37cwarq5Ul+KclXkvzXJH+S5O8tH+P6JN+34nzhvNawD/5Okvec4/bfX2Ga8Ljlcu33JXlG\nFvva/Umel+QNSW6uqkMt1z7UOLCKAffDluShLF67a9+2R4abMRzorUmencX+9qkk1x1nkI29NrfW\nJntJ8vVJbk7yzcuvd5J8NclrjzHWX0ryR1n8IvicPbd/QxafjfLVJN/b+zm7zPcy5D6Y5MokjyW5\ns/fzcpn3JckHlvvmrftuf/tyH3zXJsdxcVnlMuD+fCbJ6d7Px2V7L0luTHL1nv9+LIsPGD/qOBt5\nbZ7025Baa3/WWvtAa+0PBxjuH2ZRf/+5tfbbex7j/2VRmZXknwzwOHAQ+yCTsvzL2Uuy+Fypd+3b\nvJPkS0l+sKq+cRPjwCrsh8xJa+1DrbVPrjLGJn8mJh0kA3thFodYP3CObfck+XKS66vq6zc6K7bJ\nOvbBv1pV/6iqfmx5/awhJgpLL1xef3D/htbaI1kc2bs4yfM3NA6sYuj98ClV9QPL198fqaqbnI/K\nxGzstdkPxtdcu7z++P4NrbWvZnH49aIkJzY5KbbKOvbBlyT56ST/enn9u1X1q1V17HOtYI9rs4jo\nJ+2zSw8sr6/Z0DiwiqH3w8uTnMri9fdkkl9N8kBVvWCVScIGbey1WZB8zaXL64cP2H72dqu9sC5D\n7oNfTnJ7km9P8k3Ly41Z/IN4U5L/5W0HDGCofdbrL2Mw5H54Z5IXZREllyR5VpI7klyV5P2OVjMR\nG3tt7h4kF1ga71yXYy1ZBpswlv25tfa51tpua+13Wmv/d3n5tSwWgfjfSf5mkh9ex2MDbLvW2tta\na3cvX4sfba19pLV2a5KfzOItLrt9ZwjjMoZlfx/I4q+5h/XpNc3jbOVdesD2s7c/tKbHZx6Ouj/v\nXY9+7ftga+2rVfUfkvydJC9I8lPHHQsy3D7r9Zcx2MR+eEeSN2fx+gtjt7HX5u5B0lp7Se85LN2f\nxdtbrkny23s3VNXXJfmWJH+e5PTmp8ZUrLg/b2of/Nzy+pIVx4H7s1j97aD3Dz9zeX3Q+4+HHgdW\nsYn90OsvU7Kx1+bub9kakV/N4n/6LefYdmMWh1jvba392UZnxTbZ1D74Hctrcc2q7lpe/939G6rq\nqUluyOKI4W9saBxYxSb2Q6+/TMnGXpu3Lkiq6i9X1bVVdfm+Tb+U5PNJXlVV377n/k/JYoWMlsUq\nRbAuR94HD9qfq+o5VbX/04FTVS9K8sblWD8//FNgm7TWTmexHORVVfW6fZtvz+KvwKdaa19Jkqq6\naLm/nlhlHFiHofbnqrquqi7eP35VXZXknVm8/r57+GcAxzOG1+ZaftriZFXVjya5bvnltyX520l+\nPV9biuzXWms/s+f+r0nys0n+Y2vttfvGenmSX0zyp0n+S5I/SfKyLA5V/WJr7VVrfCpw5H3woP25\nqu7K4lDqryf51PLmZyf5ziz+MXxra+0n1vts2AbLf8DuTXJZkvcm+WgWa9LflORjSW5orX1hed8r\ns1i++sHW2v5f4g49DqzLEPtzVe1kcZ7IPUn+IMkXk1yd5LuTPCXJ+5J8T2vtzzfzrNhGy98nXrH8\n8vIsFrU5neTDy9s+31p7y/K+3V+bu59DMoBb8sSTw1oWh0S/Y8/XP7Pve9ry8sQbW/vvVXVjkn+R\n5HuS/MUkn0jypjj5lw045j54rv35VJK/n+S5WfyMfH2SP8wicv59a+3e4WfPNmqtna6q52bx17Jb\nkrw0yWez+NyF21tr+5eLPOj196jjwOAG2p/vyuKPSM9Jcn0Wf0V+KItfBE+11n5hfc8AHvdtSV69\n5+uWxbmo37L8+sEkb9m3vdtr8+SPkAAAANO1deeQAAAA4yFIAACAbgQJAADQjSABAAC6ESQAAEA3\nggQAAOhGkAAAAN0IEgAAoBtBAgAAdCNIAACAbgQJAADQjSABAAC6ESQAAEA3ggQAAOhGkAAAAN0I\nEgAAoBtBAgAAdPP/AdoStj24oRRMAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x10f88a6d8>"
+      ]
+     },
+     "metadata": {
+      "image/png": {
+       "height": 392,
+       "width": 402
+      }
+     },
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "particles = np.random.rand(2, 10)\n",
+    "particles = np.array([[.2, 1.5], [-.5, .8], [.3, .9]]).T\n",
+    "print(particles)\n",
+    "segment = np.array([[-.5, .5], [.5, 1.5]]).T\n",
+    "print(segment)\n",
+    "def mirror(particles, segment):\n",
+    "    mirror = particles.copy()\n",
+    "    perp = np.array([segment[1, 1] - segment[1, 0], -(segment[0, 1] - segment[0, 0])])\n",
+    "    print(perp)\n",
+    "    # distance to the line\n",
+    "    d = perp[0]*(segment[0, 1] - particles[0, :]) + perp[1]*(segment[1, 1] - particles[1, :])\n",
+    "    print(d[np.newaxis, :])\n",
+    "    mirror =  particles + 2 * d[np.newaxis, :] * perp[:, np.newaxis] / (perp**2).sum()\n",
+    "    return mirror\n",
+    "\n",
+    "particles_mirror = mirror(particles, segment)\n",
+    "\n",
+    "fig = plt.figure(figsize=(5, 5))\n",
+    "border = 0.0\n",
+    "ax = fig.add_axes((border, border, 1.-2*border, 1.-2*border), axisbg='w')\n",
+    "ax.plot(particles[0, :], particles[1, :], 'b+')\n",
+    "ax.plot(segment[0, :], segment[1, :], 'r')\n",
+    "ax.plot(particles_mirror[0, :], particles_mirror[1, :], 'g+')\n",
+    "ax.plot(particles_mirror[0, :], np.hstack((particles[1, :], particles_mirror[1, :])), 'k')\n",
+    "ax.set_xlim([-1, 1])\n",
+    "ax.set_ylim([0, 2])\n",
+    "print(particles_mirror)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## git\n"
    ]
   },
