on connecte le π + coordonnées absolues

--- a/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
+++ b/posts/2015-10-27 élasticité rapsberry pyserial.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -64,6 +65,227 @@
     "pi@pielastic ~/elasticte $ python scenario_line_contraint.py serial\n",
     "\n",
     "````\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## coordonées absolues\n",
+    "\n",
+    "Prenons un cas  simple avec 12 pas possible et calculons en fonction de la position actuelle et de la position désirée la commande à envoyer aux moteurs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_pas = 12\n",
+    "position_present = 6\n",
+    "position_desired = 4\n",
+    "\n",
+    "d_position = (position_desired - position_present + nb_pas//2 ) % nb_pas - nb_pas//2\n",
+    "\n",
+    "print (d_position)\n",
+    "\n",
+    "position_present = (position_present + d_position ) % nb_pas\n",
+    "\n",
+    "print (position_present)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on vérifie que ça marche pour toute une série de positions désirées et qu'on évite le demi tour:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2 -1  0  1  2  3  4  5 -6 -5 -4 -3]\n",
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_pas = 12\n",
+    "position_present = 2\n",
+    "position_desired = np.arange(nb_pas)\n",
+    "\n",
+    "d_position = (position_desired - position_present + nb_pas//2 ) % nb_pas - nb_pas//2\n",
+    "\n",
+    "print (d_position)\n",
+    "\n",
+    "position_present = (position_present + d_position ) % nb_pas\n",
+    "\n",
+    "print (position_present)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "on vérifie aussi que ça marche pour toute une série de positions initiales et qu'on évite le demi tour:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-4 -5 -6  5  4  3  2  1  0 -1 -2 -3]\n",
+      "[8 8 8 8 8 8 8 8 8 8 8 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_pas = 12\n",
+    "position_present = np.arange(nb_pas)\n",
+    "position_desired = 8\n",
+    "\n",
+    "d_position = (position_desired - position_present + nb_pas//2 ) % nb_pas - nb_pas//2\n",
+    "\n",
+    "print (d_position)\n",
+    "\n",
+    "position_present = (position_present + d_position ) % nb_pas\n",
+    "\n",
+    "print (position_present)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### arduino\n",
+    "\n",
+    "coordonnées moteur + engrenage:\n",
+    " - 1.8 deg par pas (soit 200 pas par tour) x 32 divisions de pas = \n",
+    " - demultiplication : pignon1= 14 dents, pignon2 = 60 dents\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27428.571428571428\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_pas = 200. * 32. * 60 / 14\n",
+    "print(n_pas)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donc, on a un nombre même pas entier mais c'est pas grave. C'est le nombre de pas à faire pour le moteur pour faire faire un tour à la lame. Dans un premier temps, on va considérer ce cercle comme des entiers entre 0 et n_pas. ça devrait pouvoir être envoyé sans probleme a chaque arduino comme un int16 (à vérifier - si on a de la marge, on peut faire un truc plus précis): "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65536"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'algo sur le arduino doit donc avoir cette partie pour convertir une donnée absolue reçue en donnée relative à envoyer aux moteurs:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "nb_pas = 27428\n",
+    "\n",
+    "position_present = 27424\n",
+    "position_desired = 4 # recu avec la lecture sur le port série\n",
+    "\n",
+    "# quand on reçoit une valeur absolue on calcule\n",
+    "d_position = (position_desired - position_present + nb_pas//2 ) % nb_pas - nb_pas//2\n",
+    "\n",
+    "# on envoie d_position aux moteurs\n",
+    "\n",
+    "# on met à jour la position du moteur\n",
+    "position_present = (position_present + d_position ) % nb_pas\n",
+    "\n",
+    "print(d_position, position_present)"
    ]
   },
   {
@@ -136,7 +358,7 @@
     }
    ],
    "source": [
-    "!git commit -am' on connecte le π + simplifying things'"
+    "!git commit -am' on connecte le π + coordonnées absolues'"
    ]
   },
   {
